--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@rushstack/eslint-patch": "^1.11.0",
     "@tsconfig/node20": "^20.1.5",
     "@tsconfig/node22": "^22.0.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.14.0",
+    "@types/webpack-env": "^1.18.8",
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.1",
     "@vitejs/plugin-vue": "^5.2.3",
