--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
     "@tailwindcss/vite": "^4.1.5",
+    "@vercel/analytics": "^1.5.0",
     "ant-design-vue": "^4.2.6",
     "axios": "^1.9.0",
     "pinia": "^3.0.1",
